--- a/plant_pathology_2020_competition.ipynb
+++ b/plant_pathology_2020_competition.ipynb
@@ -6,7 +6,7 @@
       "name": "plant_pathology_2020_competition.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgeNrUIPa2JTIPXq1jyvdy",
+      "authorship_tag": "ABX9TyNSLyjDP0YFs8Ub3cLz5jum",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -795,6 +795,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Darsva3x0sDV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Transform image to array"
       ]
     },
     {
