--- a/shopee-product-matching-competition/1_shopee_eda_preprocessing.ipynb
+++ b/shopee-product-matching-competition/1_shopee_eda_preprocessing.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1-shopee--eda-preprocessing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqq8J+ghF6a/snMbyE6Jh/",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNKW6CKaps4kICdayfDy6UX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +53,11 @@
         "<div>\r\n",
         "    <img src=\"https://i.imgur.com/mqPVRT5.png\">\r\n",
         "</div>\r\n",
-        "\r\n"
+        "\r\n",
+        "\r\n",
+        "Refrence:\r\n",
+        "\r\n",
+        "https://www.kaggle.com/ruchi798/shopee-eda-rapids-preprocessing\r\n"
       ]
     },
     {
@@ -208,7 +213,7 @@
         "from google.colab import files\r\n",
         "files.upload() # upload kaggle.json file"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,7 +296,7 @@
         "\r\n",
         "train_df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +403,7 @@
       "source": [
         "test_df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
