--- a/toxic-comment-classification-challenge/1_toxic_comment_classification_using_BERT.ipynb
+++ b/toxic-comment-classification-challenge/1_toxic_comment_classification_using_BERT.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1-toxic-comment-classification-using-BERT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKRHgXgX9JbVpYHThNkV1o",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPI6zBuamojbBkVUHsLaROj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,10 +74,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Zv6xUC_LJYPJ"
+      },
+      "source": [
+        "%%shell\n",
+        "\n",
+        "pip install -q tf-models-official\n",
+        "\n",
+        "# A dependency of the preprocessing for BERT inputs\n",
+        "pip install -q tensorflow-text"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6XGfG4cx_4n4"
       },
       "source": [
-        "%tensorflow_version 2.x     # magic command instructing to use TensorFlow version 2+\n",
+        "# %tensorflow_version 2.x     # magic command instructing to use TensorFlow version 2+\n",
         "\n",
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing\n",
@@ -84,59 +101,17 @@
         "from sklearn.model_selection import train_test_split\n",
         "import tensorflow as tf\n",
         "import tensorflow_hub as hub\n",
+        "import tensorflow_text as text\n",
+        "from official.nlp import optimization  # to create AdamW optmizer\n",
+        "\n",
         "from datetime import datetime\n",
         "\n",
         "import os\n",
+        "import shutil\n",
         "import collections"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Y6driza_APHI"
-      },
-      "source": [
-        "!pip install bert-tensorflow"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 461
-        },
-        "id": "s2yxjan3AWCn",
-        "outputId": "1514b23b-f6e6-440f-9c71-93390142f4db"
-      },
-      "source": [
-        "import bert\n",
-        "from bert import run_classifier\n",
-        "from bert import optimization\n",
-        "from bert import tokenization\n",
-        "from bert import modeling"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-f2154455fe4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbert\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0moptimization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbert\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtokenization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbert\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodeling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/bert/modeling.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv1\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlayers\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcontrib_layers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow.contrib'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -198,7 +173,7 @@
         "from google.colab import files\n",
         "files.upload() # upload kaggle.json file"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -270,7 +245,7 @@
         "mkdir jigsaw-toxic-comment-classification-challenge\n",
         "mv *.csv jigsaw-toxic-comment-classification-challenge"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
