--- a/denoising-dirty-documents/02_denoising_images_using_random_forest_regression.ipynb
+++ b/denoising-dirty-documents/02_denoising_images_using_random_forest_regression.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "02-denoising-images-using-random-forest-regression.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNy4lvFF4uMMZMYBL6mDk+q",
+      "authorship_tag": "ABX9TyNIY01PHZizm64PVZgtM98s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +105,7 @@
       "metadata": {
         "id": "GfVXEBnJWl9h"
       },
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -126,36 +125,52 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import files\n",
-        "files.upload() # upload kaggle.json file"
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "id": "yQGnDfE8Wmft"
+        "id": "vFYOJ0zCd3V4",
+        "outputId": "307353b4-e28d-4381-c734-416e1490b158",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "# content/gdrive/My Drive/Kaggle is the path where kaggle.json is  present in the Google Drive\n",
+        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/MyDrive/kaggle-keys\""
+      ],
+      "metadata": {
+        "id": "EvkVVR0teD_1"
+      },
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "%%shell\n",
-        "\n",
-        "mkdir -p ~/.kaggle\n",
-        "mv kaggle.json ~/.kaggle/\n",
-        "ls ~/.kaggle\n",
-        "chmod 600 /root/.kaggle/kaggle.json\n",
-        "\n",
-        "# download dataset from kaggle> URL: https://www.kaggle.com/competitions/denoising-dirty-documents\n",
-        "kaggle competitions download -c denoising-dirty-documents\n",
-        "\n",
-        "unzip -qq denoising-dirty-documents.zip"
+        "# change the working directory\n",
+        "%cd ."
       ],
       "metadata": {
+        "id": "BtyzXhUpe9ib",
+        "outputId": "44edef74-7b40-4a28-cafe-9c0a247fb666",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZGJQdpj1WqtM",
-        "outputId": "5425c812-9af3-49f0-f7ee-c0f916b34779"
+        }
       },
       "execution_count": 3,
       "outputs": [
@@ -163,10 +178,38 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "kaggle.json\n",
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%shell\n",
+        "\n",
+        "# download dataset from kaggle> URL: https://www.kaggle.com/competitions/denoising-dirty-documents\n",
+        "kaggle competitions download -c denoising-dirty-documents\n",
+        "\n",
+        "unzip -qq denoising-dirty-documents.zip\n",
+        "rm -rf denoising-dirty-documents.zip"
+      ],
+      "metadata": {
+        "id": "gdVAeISWeaeu",
+        "outputId": "65f2c9be-492f-4818-eff1-d530d9598164",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Downloading denoising-dirty-documents.zip to /content\n",
-            " 98% 35.0M/35.7M [00:00<00:00, 146MB/s] \n",
-            "100% 35.7M/35.7M [00:00<00:00, 129MB/s]\n"
+            "100% 35.7M/35.7M [00:00<00:00, 95.6MB/s]\n",
+            "100% 35.7M/35.7M [00:00<00:00, 85.7MB/s]\n"
           ]
         },
         {
@@ -177,7 +220,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -200,7 +243,7 @@
       "metadata": {
         "id": "4DGAMtnqXLq5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +264,7 @@
       "metadata": {
         "id": "vrdNr-7wuxeG"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +299,7 @@
       "metadata": {
         "id": "uhsxA_F-qy6w"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +344,7 @@
       "metadata": {
         "id": "rJZTwih8ZgAi"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +417,7 @@
         },
         "outputId": "c3ec1863-192d-402f-9b15-3b5869183467"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +440,7 @@
         "id": "ppwGpBqxaWHX",
         "outputId": "3a31f82b-473b-4de8-f2bf-33129ad8c124"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +466,7 @@
           "height": 299
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +834,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +860,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +888,7 @@
       "metadata": {
         "id": "99zNihPdbVUR"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
