--- a/google-ai4code/01_exploratory_data_analysis.ipynb
+++ b/google-ai4code/01_exploratory_data_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "01-exploratory-data-analysis.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMM07cnnib1Xqco13tn731Z",
+      "authorship_tag": "ABX9TyOss4IAM37lxft9ug2q7Hsv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Exploratory data analysis is the work of a detective. Understanding the possibilities of your data is the first step in laying the groundwork for future modeling. With this notebook, we try to make sense of our data and demonstrate how data can be analyzed. We'll look for trends, limitations, and other characteristics linked to the questions we're interested in as part of our investigation.**"
+        "**Exploratory data analysis is the work of a detective. Understanding the possibilities of your data is the first step in laying the groundwork for future modeling. With this notebook, we try to make sense of our data and demonstrate how data can be analyzed. We'll look for trends, limitations, and other characteristics linked to the questions we're interested in as part of our investigation.**\n",
+        "\n",
+        "Reference:\n",
+        "\n",
+        "https://www.kaggle.com/code/andreaspalmgren/ai4code-comprehensive-eda"
       ],
       "metadata": {
         "id": "3Y41yF4xnk6k"
@@ -91,7 +95,7 @@
       "metadata": {
         "id": "JsIsiP9Nnz0j"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +111,7 @@
         "id": "x66e8lWQkPlF",
         "outputId": "1be5ee96-b478-4ff3-a376-cd52ed550ac7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +132,7 @@
       "metadata": {
         "id": "iHwuEGvgkT5U"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +153,7 @@
         "id": "HaL8UZePkaBM",
         "outputId": "24aceee7-c9e6-4402-8e1f-029784ec99e8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +209,7 @@
       "metadata": {
         "id": "-NKze0qHoUYK"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
