--- a/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
+++ b/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0EIv1MKiI0rE25x2znqss",
+      "authorship_tag": "ABX9TyP+LhTRTsa8vzXPL+sZBSRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WD0mP_g3jkvE",
-        "outputId": "3c62935b-2690-444f-f335-91b2a5d47f08"
+        "outputId": "ec4a29c2-2675-4174-a224-800976ed2b5e"
       },
       "execution_count": 3,
       "outputs": [
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "Mw4l9ssAjwrL"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hf5vpIiSjyxI",
-        "outputId": "37a36463-c8f3-4fda-b788-687ed7d34f3c"
+        "outputId": "fd66441f-d681-4a91-ec05-e5f0401fbad0"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "-NtruM1tkCdL"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "FgUnK13slYwU"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -254,9 +254,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-33GYHallCT",
-        "outputId": "745e43b4-5b07-4471-8511-6da811450225"
+        "outputId": "101f2e35-0776-4780-b080-936af5b187bb"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +296,189 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Weights and biases\n",
+        "w = torch.randn(2, 3, requires_grad=True)\n",
+        "b = torch.randn(2, requires_grad=True)\n",
+        "\n",
+        "print(w)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "VmWkh10UmDRu",
+        "outputId": "62040c84-172d-41e4-963f-a87cf8fd840d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-1.1528,  1.0559, -1.5837],\n",
+            "        [ 0.5965,  1.1077,  0.3773]], requires_grad=True)\n",
+            "tensor([-0.0275, -0.4942], requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The *model* is simply a function that performs a matrix multiplication of the input `x` and the weights `w` (transposed) and adds the bias `b` (replicated for each observation).\n",
+        "\n",
+        "$$\n",
+        "\\hspace{2.5cm} X \\hspace{1.1cm} \\times \\hspace{1.2cm} W^T \\hspace{1.2cm}  + \\hspace{1cm} b \\hspace{2cm}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\left[ \\begin{array}{cc}\n",
+        "73 & 67 & 43 \\\\\n",
+        "91 & 88 & 64 \\\\\n",
+        "\\vdots & \\vdots & \\vdots \\\\\n",
+        "69 & 96 & 70\n",
+        "\\end{array} \\right]\n",
+        "%\n",
+        "\\times\n",
+        "%\n",
+        "\\left[ \\begin{array}{cc}\n",
+        "w_{11} & w_{21} \\\\\n",
+        "w_{12} & w_{22} \\\\\n",
+        "w_{13} & w_{23}\n",
+        "\\end{array} \\right]\n",
+        "%\n",
+        "+\n",
+        "%\n",
+        "\\left[ \\begin{array}{cc}\n",
+        "b_{1} & b_{2} \\\\\n",
+        "b_{1} & b_{2} \\\\\n",
+        "\\vdots & \\vdots \\\\\n",
+        "b_{1} & b_{2} \\\\\n",
+        "\\end{array} \\right]\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "EBFWS1Yt19xM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the model\n",
+        "def model(x):\n",
+        "  return x @ w.t() + b"
+      ],
+      "metadata": {
+        "id": "BbyAWC4b1KGJ"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The matrix obtained by passing the input data to the model is a set of predictions for the target variables."
+      ],
+      "metadata": {
+        "id": "Be9SU0uG2T48"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate predictions\n",
+        "preds = model(inputs)\n",
+        "print(preds)"
+      ],
+      "metadata": {
+        "id": "lpk5I21a2UVT",
+        "outputId": "d0c432fa-90aa-42f4-df88-ca7c430e2dee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ -81.5411,  133.4868],\n",
+            "        [-113.3773,  175.4076],\n",
+            "        [ -50.6940,  221.7120],\n",
+            "        [-130.8108,  121.9365],\n",
+            "        [ -89.0710,  173.4102]], grad_fn=<AddBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compare with targets\n",
+        "print(targets)"
+      ],
+      "metadata": {
+        "id": "5CSwni362dDb",
+        "outputId": "18403872-8e00-4612-9679-ee44d658e2ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 56.,  70.],\n",
+            "        [ 81., 101.],\n",
+            "        [119., 133.],\n",
+            "        [ 22.,  37.],\n",
+            "        [103., 119.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Because we've started with random weights and biases, the model does not a very good job of predicting the target varaibles."
+      ],
+      "metadata": {
+        "id": "eXeVjGV72xFb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Loss Function"
+      ],
+      "metadata": {
+        "id": "BjDY2zEu2xjA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can compare the predictions with the actual targets, using the following method:\n",
+        "* Calculate the difference between the two matrices (`preds` and `targets`).\n",
+        "* Square all elements of the difference matrix to remove negative values.\n",
+        "* Calculate the average of the elements in the resulting matrix.\n",
+        "\n",
+        "The result is a single number, known as the **mean squared error** (MSE)."
+      ],
+      "metadata": {
+        "id": "dMF5zTAH21VC"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "VmWkh10UmDRu"
+        "id": "k2yHl6Qt28_s"
       },
       "execution_count": null,
       "outputs": []
