--- a/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
+++ b/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+LhTRTsa8vzXPL+sZBSRK",
+      "authorship_tag": "ABX9TyMjjjgHgL7EtLBlMGRwJPVs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WD0mP_g3jkvE",
-        "outputId": "ec4a29c2-2675-4174-a224-800976ed2b5e"
+        "outputId": "83333ac7-61d8-4f00-8387-6f2cd9bfa721"
       },
       "execution_count": 3,
       "outputs": [
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hf5vpIiSjyxI",
-        "outputId": "fd66441f-d681-4a91-ec05-e5f0401fbad0"
+        "outputId": "83d62aff-79f1-49a3-ffc7-91b5e592b534"
       },
       "execution_count": 5,
       "outputs": [
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-33GYHallCT",
-        "outputId": "101f2e35-0776-4780-b080-936af5b187bb"
+        "outputId": "17d290f6-2d1e-4741-973b-b09508833fff"
       },
       "execution_count": 8,
       "outputs": [
@@ -306,7 +306,7 @@
       ],
       "metadata": {
         "id": "VmWkh10UmDRu",
-        "outputId": "62040c84-172d-41e4-963f-a87cf8fd840d",
+        "outputId": "4cdc76cb-99df-4129-ea35-ec37e6bb75c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -317,9 +317,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[-1.1528,  1.0559, -1.5837],\n",
-            "        [ 0.5965,  1.1077,  0.3773]], requires_grad=True)\n",
-            "tensor([-0.0275, -0.4942], requires_grad=True)\n"
+            "tensor([[-1.3306,  0.9132,  1.4294],\n",
+            "        [-0.8502,  1.2604,  0.3483]], requires_grad=True)\n",
+            "tensor([ 1.1598, -1.0976], requires_grad=True)\n"
           ]
         }
       ]
@@ -394,7 +394,7 @@
       ],
       "metadata": {
         "id": "lpk5I21a2UVT",
-        "outputId": "d0c432fa-90aa-42f4-df88-ca7c430e2dee",
+        "outputId": "98aad347-a528-42df-f338-3c7705393d38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -405,11 +405,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[ -81.5411,  133.4868],\n",
-            "        [-113.3773,  175.4076],\n",
-            "        [ -50.6940,  221.7120],\n",
-            "        [-130.8108,  121.9365],\n",
-            "        [ -89.0710,  173.4102]], grad_fn=<AddBackward0>)\n"
+            "tensor([[ 26.6747,  36.2606],\n",
+            "        [ 51.9182,  54.7395],\n",
+            "        [ 90.6727, 114.0314],\n",
+            "        [-42.4062, -20.7368],\n",
+            "        [ 97.0734,  85.6181]], grad_fn=<AddBackward0>)\n"
           ]
         }
       ]
@@ -422,7 +422,7 @@
       ],
       "metadata": {
         "id": "5CSwni362dDb",
-        "outputId": "18403872-8e00-4612-9679-ee44d658e2ac",
+        "outputId": "392884fd-a334-4c9b-88a7-bc15b5b055d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -476,9 +476,229 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# MSE loss\n",
+        "def mse(t1, t2):\n",
+        "  diff = t1 - t2\n",
+        "  return torch.sum(diff * diff) / diff.numel()"
+      ],
       "metadata": {
         "id": "k2yHl6Qt28_s"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compute loss\n",
+        "loss = mse(preds, targets)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "sN16xe8w5KZ2",
+        "outputId": "f9d27100-2f31-49c8-9963-68e3c0b55bfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(1477.7517, grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The resulting number is called the **loss**, because it indicates how bad the model is at predicting the target variables. Lower the loss, better the model."
+      ],
+      "metadata": {
+        "id": "FMTXY-o15aL0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Compute Gradients"
+      ],
+      "metadata": {
+        "id": "k1p_6tX15bdi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With PyTorch, we can automatically compute the gradient or derivative of the `loss` w.r.t. to the weights and biases, because they have `requires_grad` set to `True`."
+      ],
+      "metadata": {
+        "id": "x3WwO20b5eCL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compute gradients\n",
+        "loss.backward()"
+      ],
+      "metadata": {
+        "id": "s25HoyCq5gF2"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The gradients are stored in the `.grad` property of the respective tensors."
+      ],
+      "metadata": {
+        "id": "ok-F9Tvu5xRw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Gradients for weights\n",
+        "print(w)\n",
+        "print(w.grad)"
+      ],
+      "metadata": {
+        "id": "-qS20vxN5xqj",
+        "outputId": "0e15ac5b-d1e8-4a8d-f696-dc4502bed350",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-1.3306,  0.9132,  1.4294],\n",
+            "        [-0.8502,  1.2604,  0.3483]], requires_grad=True)\n",
+            "tensor([[-2846.0066, -2331.6536, -1512.6191],\n",
+            "        [-3303.0898, -2912.1199, -1996.9275]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Gradients for bias\n",
+        "print(b)\n",
+        "print(b.grad)"
+      ],
+      "metadata": {
+        "id": "Kj3kuyT-535w",
+        "outputId": "7e8e9d8d-8488-4ff0-e8f1-6477ee1b642d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 1.1598, -1.0976], requires_grad=True)\n",
+            "tensor([-31.4134, -38.0174])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A key insight from calculus is that the gradient indicates the rate of change of the loss, or the slope of the loss function w.r.t. the weights and biases.\n",
+        "\n",
+        "* If a gradient element is **postive**,\n",
+        "    * **increasing** the element's value slightly will **increase** the loss.\n",
+        "    * **decreasing** the element's value slightly will **decrease** the loss.\n",
+        "\n",
+        "<img src=\"https://i.imgur.com/2H4INoV.png\" width=\"400\" />\n",
+        "\n",
+        "\n",
+        "\n",
+        "* If a gradient element is **negative**,\n",
+        "    * **increasing** the element's value slightly will **decrease** the loss.\n",
+        "    * **decreasing** the element's value slightly will **increase** the loss.\n",
+        "    \n",
+        "<img src=\"https://i.imgur.com/h7E2uAv.png\" width=\"400\" />    \n",
+        "\n",
+        "The increase or decrease is proportional to the value of the gradient.\n",
+        "\n",
+        "Finally, we'll reset the gradients to zero before moving forward, because PyTorch accumulates gradients."
+      ],
+      "metadata": {
+        "id": "Jlp4D0DS6YFd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w.grad.zero_()\n",
+        "b.grad.zero_()\n",
+        "print(w.grad)\n",
+        "print(b.grad)"
+      ],
+      "metadata": {
+        "id": "VbyjaidE6Ygt",
+        "outputId": "2f52f677-f4f9-4b36-edcb-60903a5d1ec7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0., 0., 0.],\n",
+            "        [0., 0., 0.]])\n",
+            "tensor([0., 0.])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Adjust Gradients"
+      ],
+      "metadata": {
+        "id": "Z2iFDAVb7Kmq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We'll reduce the loss and improve our model using the gradient descent algorithm, which has the following steps:\n",
+        "\n",
+        "1. Generate predictions\n",
+        "2. Calculate the loss\n",
+        "3. Compute gradients w.r.t the weights and biases\n",
+        "4. Adjust the weights by subtracting a small quantity proportional to the gradient\n",
+        "5. Reset the gradients to zero"
+      ],
+      "metadata": {
+        "id": "XArjV53J7MP5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bPo8xLeH7Pbc"
       },
       "execution_count": null,
       "outputs": []
